Update deprecated "--no-dev" flag for poetry
https://python-poetry.org/docs/cli/#options-2

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Setup poetry
         run: |
           poetry config virtualenvs.in-project true
-          poetry install --no-dev
+          poetry install --without dev
 
       - name: Build package
         run: |
